<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/listViewLabels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">
        </SearchView>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />

        <ImageButton
            android:id="@+id/listTileSwitch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="5dp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:src="@drawable/tile_icon"
            android:background="@drawable/icon_bg"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listViewLabels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <TextView
            android:id="@+id/nameLabel"
            android:layout_weight="3"
            style="@style/ListViewLabelStyle"
            android:text="@string/name_label_text" />

        <TextView
            android:id="@+id/categoryLabel"
            android:layout_weight="3"
            style="@style/ListViewLabelStyle"
            android:text="@string/category_label_text" />

        <TextView
            android:id="@+id/priceLabel"
            android:layout_weight="2"
            style="@style/ListViewLabelStyle"
            android:text="@string/price_label_text" />

        <TextView
            android:id="@+id/conditionLabel"
            android:layout_weight="3"
            style="@style/ListViewLabelStyle"
            android:text="@string/condition_label_text" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@+id/load_more_button"
        app:layout_constraintTop_toBottomOf="@+id/listViewLabels"
        tools:layout_editor_absoluteX="8dp">

    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/load_more_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:text="@string/load_more_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view" />

    <ImageButton
        android:id="@+id/check_cart_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_shopping_cart"
        app:layout_constraintStart_toEndOf="@+id/load_more_button"
        app:layout_constraintTop_toBottomOf="@+id/recycler_view"
        android:background="@drawable/icon_bg"
        android:layout_marginVertical="3dp"
        android:layout_marginStart="15dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
