<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motionLayout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:layoutDescription="@xml/carousel_format"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/carousel_image1"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/product_image_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/carousel_image2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/acer_1" />

            <ImageView
                android:id="@+id/carousel_image2"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:contentDescription="@string/product_image_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/acer_2" />

            <ImageView
                android:id="@+id/carousel_image3"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/product_image_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/carousel_image2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/acer_3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="80dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="80dp" />

            <androidx.constraintlayout.helper.widget.Carousel
                android:id="@+id/carousel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:carousel_backwardTransition="@+id/backward"
                app:carousel_firstView="@+id/carousel_image2"
                app:carousel_forwardTransition="@+id/forward"
                app:carousel_infinite="true"
                app:carousel_nextState="@+id/next"
                app:carousel_previousState="@+id/previous"
                app:carousel_touchUpMode="carryVelocity"
                app:constraint_referenced_ids="carousel_image1,carousel_image2,carousel_image3">
            </androidx.constraintlayout.helper.widget.Carousel>

        </androidx.constraintlayout.motion.widget.MotionLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/motionLayout">

            <TextView
                android:id="@+id/detail_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline3" />

            <TextView
                android:id="@+id/detail_product_category"
                style="@style/DetailViewTextStyle" />

            <TextView
                android:id="@+id/detail_product_price"
                style="@style/DetailViewTextStyle" />

            <TextView
                android:id="@+id/detail_product_condition"
                style="@style/DetailViewTextStyle" />

            <TextView
                android:id="@+id/detail_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp" />

            <Button
                android:id="@+id/add_to_cart_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_to_cart" />

            <Button
                android:id="@+id/back_item_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back_to_list" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
